--- a/styles/page.css
+++ b/styles/page.css
@@ -53,4 +53,20 @@
             color: var(--ascent-blue);
     }
     }
+
+    .destino_3 {
+        ul {
+            li:nth-of-type(1){
+                color: var(--ascent-purple);           
+            }
+            
+            li:nth-of-type(2){
+                color: var(--ascent-pimk);
+            }
+
+            li:nth-of-type(3){
+                color: var(--ascent-orange);
+            }
+        }
+    }
 }
