--- a/styles/page.css
+++ b/styles/page.css
@@ -56,17 +56,21 @@
 
     .destino_3 {
         ul {
-            li:nth-of-type(1){
+            li:nth-of-type(1) {
                 color: var(--ascent-purple);           
             }
             
-            li:nth-of-type(2){
-                color: var(--ascent-pimk);
+            li:nth-of-type(2) {
+                color: var(--ascent-pink);
             }
 
-            li:nth-of-type(3){
+            li:nth-of-type(3) {
                 color: var(--ascent-orange);
             }
         }
+    }
+
+    footer {
+        text-align: center;
     }
 }
